tests/baselines/reference/parserGreaterThanTokenAmbiguity12.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity12.ts (1 errors) ====
    1 >> = 2;
         ~
!!! parserGreaterThanTokenAmbiguity12.ts(1,6): error TS1005: 'expression' expected.